@@ -1,3 +1,14 @@
+2006-12-20  Edward Hervey  <edward@fluendo.com>
+
+	* pitivi/bin.py:
+	Don't call link/unlink functions if atee/vtee do not exist. This removes
+	some warnings.
+	* pitivi/discoverer.py:
+	Change behaviour of discoverer to handle cases where demuxers do not
+	create all pads at once, but rely on emitting 'no-more-pads' to say
+	there are no more coming.
+	Fixes #353859
+
 2006-12-20  Ernst Persson  <ernstp@gmail.com>
 
 	reviewed by: Edward Hervey <edward@fluendo.com>
